base/refactor: Minor changes
